--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.4.3"
+  },
+  "engines": {
+    "node": "11.4.0"
   }
 }
